--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,5 +37,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'French literature -- Translations into Esperanto'
 - !lcc 'PQ'
+- GITenberg
 title: Vojaĝo interne de mia ĉambro
 url: http://www.gutenberg.org/ebooks/25539
